--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  background: #888;
+  color: blue;
+  font-family: sans-serif;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+} 
