--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -1,6 +1,8 @@
-<ul>
-  <li *ngFor="let note of notes">
+<ul class="notes">
+  <li *ngFor="let note of notes" [class.selected]="note === selectedNote" (click)="onSelect(note)">
     <h2>{{note.title}}</h2>
     <p>{{note.text}}</p>
   </li>
 </ul>
+
+<app-note-modify [note]="selectedNote"></app-note-modify>
