Added note service and delete functionality

--- a/src/app/note-modify/note-modify.component.html
+++ b/src/app/note-modify/note-modify.component.html
@@ -10,6 +10,6 @@
   </div>
   <div class="col">
     <button>Add</button>
-    <button>Delete</button>
+    <button (click)="deleteNote(note)">Delete</button>
   </div>
 </div>
