--- a/src/app/note-modify/note-modify.component.css
+++ b/src/app/note-modify/note-modify.component.css
@@ -36,7 +36,7 @@ button {
   margin-right: 1rem;
 }
 
-button:hover {
+button:not(:disabled):hover {
   background-color: #0069d9;
   border-color: #0062cc;
 }
@@ -49,6 +49,10 @@ button:focus {
 button:active {
   background-color: #0062cc;
   border-color: #005cbf;
+}
+
+button:disabled {
+  opacity: .65;
 }
 
 .col {
